Fixed the unit tests